--- a/app/views/to_do_items/_to_do_item.html.erb
+++ b/app/views/to_do_items/_to_do_item.html.erb
@@ -1,1 +1,2 @@
 <p><%= to_do_item.content %></p>
+<%= link_to "Delete", to_do_list_to_do_item_path(@to_do_list, to_do_item.id), method: :delete, data: { confirm: 'Are you sure?' } %>
