--- a/app/views/to_do_items/_to_do_item.html.erb
+++ b/app/views/to_do_items/_to_do_item.html.erb
@@ -1,2 +1,23 @@
-<p><%= to_do_item.content %></p>
-<%= link_to "Delete", to_do_list_to_do_item_path(@to_do_list, to_do_item.id), method: :delete, data: { confirm: 'Are you sure?' } %>
+<div class="row clearfix">
+    <% if to_do_item.completed? %>
+    <div class="complete">
+        <%= link_to "Mark as Completed", complete_to_do_list_to_do_item_path(@to_do_list, to_do_item.id), method: :patch %>
+    </div>
+    <div class="to_do_item">
+        <p><strike><%= to_do_item.content %></strike></p>
+    </div>
+    <div class="trash">
+        <%= link_to "Delete", to_do_list_to_do_item_path(@to_do_list, to_do_item.id), method: :delete, data: { confirm: 'Are you sure?' } %>
+    </div>
+    <% else %>
+    <div class="complete">
+        <%= link_to "Mark as Completed", complete_to_do_list_to_do_item_path(@to_do_list, to_do_item.id), method: :patch %>
+    </div>
+    <div class="to_do_item">
+        <p><%= @to_do_item.content %></p>
+    </div>
+    <div class="trash">
+        <%= link_to "Delete", to_do_list_to_do_item_path(@to_do_list, to_do_item.id), method: :delete, data: { confirm: 'Are you sure?' } %>
+    </div>
+    <% end %>
+</div>
